# OctoWage

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  COMPETITIVE_ANALYSIS_v1.0.md  Dockerfile  LICENSE  README.md  RESEARCH_supersalarios_v1.0.md  docker-compose.yml  pyproject.toml
app/: __init__.py  config.py  main.py
app/core/: cache.py
app/routes/: fragments.py  pages.py
app/services/: exchange_rate.py  salary_data.py
app/templates/: base.html
app/templates/fragments/: career_detail.html  comparison_bars.html  cost_calculator.html
app/templates/pages/: 404.html  about.html  compare.html  home.html  privacy.html  terms.html
deploy/: nginx-ssl.conf  nginx.conf  setup-vps.sh  start.sh  update.sh
docs/: API_VALIDATION_v1.0.md  ARCHITECTURE_v1.0.md  DEPLOY_v1.0.md  LEGAL_ANALYSIS_v1.0.md
static/css/: base.css  components.css  layouts.css  variables.css
static/img/: logo-versions.html
