[project]
name = "octowage"
version = "0.1.0"
description = "Plataforma open source de transparência salarial do setor público brasileiro"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Brunno ML", email = "brunnoml@gmail.com"},
]
keywords = ["transparencia", "salarios", "setor-publico", "brasil", "dados-abertos"]

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "jinja2>=3.1.3",
    "httpx>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "python-multipart>=0.0.6",
    "cachetools>=5.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.2.0",
    "black>=24.1.0",
    "isort>=5.13.0",
]
db = [
    "sqlalchemy[asyncio]>=2.0.25",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
]
etl = [
    "pandas>=2.2.0",
    "basedosdados>=2.0.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100
